# trade-terminal-cockpit

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  README.md
.ai/: hooks.json  mcp_profiles.yaml  tool_policy.yaml
.github/workflows/: ci.yml
config/: external.env.example
contracts/proto/trading/: commands.proto  common.proto  events.proto  projections.proto
docs/: gap-closure-register.md  tailnet-access.md
examples/: command-gateway-policy.example.json
fixtures/: order_lifecycle_events.jsonl  projection_snapshot.json
services/command-gateway/: Cargo.toml
services/command-gateway/src/: main.rs
services/state-projectiond/: Cargo.toml
services/state-projectiond/src/: main.rs
systemd/user/: trade-terminal-cockpit-command-gateway.service  trade-terminal-cockpit-state-projectiond.service
tools/: check_external_integration.py  check_paper_strategy_cockpit_observability.py  check_repo_boundary.sh  codex_edit_gate.sh  init_trading_streams.py  install_local_systemd.sh  install_paper_cockpit_bridge_systemd.sh  nats_boundaries.py  open_external_tui.sh  open_local_tui.sh  preopen_e2e_check.py  protobuf_event_codec.py  publish_event_jsonl_to_nats.py  publish_paper_cockpit_bridge.py  register_strategy_runtime_descriptor.py  risk_command_adapter.py  run_command_gateway_service.sh  run_external_e2e.py  run_state_projectiond_service.sh  smoke_check.sh  tailnet_cockpit_url.sh  test_nats_boundaries.py  trade_nats_lite.py  verify_on_google_vm.sh
trade-contracts/: Cargo.toml  build.rs
trade-contracts/src/: lib.rs
trade-core/: Cargo.toml
trade-core/src/: commands.rs  event_codec.rs  events.rs  filter.rs  lib.rs  projection.rs  reducer.rs  sample.rs  state.rs  types.rs
trade-core/tests/: event_filter_tests.rs  order_lifecycle_tests.rs  projection_snapshot_tests.rs
trade-tui/: Cargo.toml
trade-tui/src/: app.rs  cli.rs  command_client.rs  event_codec.rs  event_stream.rs  input.rs  main.rs  observability.rs  render.rs  snapshot_client.rs
tradectl/: Cargo.toml
tradectl/src/: main.rs
