[workspace]
resolver = "2"
members = [
    "trade-core",
    "trade-tui",
    "tradectl",
]

[workspace.package]
edition = "2021"
rust-version = "1.75"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.38"

trade-core = { path = "trade-core" }
