[workspace]
resolver = "2"
members = [
    "services/command-gateway",
    "services/state-projectiond",
    "trade-contracts",
    "trade-core",
    "trade-tui",
    "tradectl",
]

[workspace.package]
edition = "2021"
rust-version = "1.88"
license = "LicenseRef-Proprietary"
publish = false

[workspace.dependencies]
anyhow = "1"
clap = { version = "=4.5.4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
prost = "0.13"
prost-build = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-nats = "0.38"
futures-util = "0.3"
opentelemetry = "0.31"
opentelemetry_sdk = "0.31"
opentelemetry-stdout = "0.31"
sha2 = "0.10"

trade-contracts = { path = "trade-contracts" }
trade-core = { path = "trade-core" }
