[package]
name = "trade-tui"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
async-nats.workspace = true
clap.workspace = true
crossterm.workspace = true
futures-util.workspace = true
opentelemetry.workspace = true
opentelemetry-stdout.workspace = true
opentelemetry_sdk.workspace = true
prost.workspace = true
ratatui.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
trade-contracts.workspace = true
trade-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
